--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,7 +72,7 @@ button {
 }
 
 article img {
-  @apply block max-w-full border-8 border-foreground/10 rounded-xl overflow-hidden mx-auto;
+  @apply block max-w-full rounded-xl overflow-hidden mx-auto;
 
   &[pixelated='true'] {
     image-rendering: pixelated;
